# logic-analyzer-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logic_analyzer/: __init__.py  cli.py  device.py  protocol.py
tests/: test_device.py  test_protocol.py
